# skill-test

./: .gitignore  README.md
.codex/skills/hist/: SKILL.md
.codex/skills/servicex/: SKILL.md
.codex/skills/servicex/references/: datamodel-xaod-tools-btagging.md  servicex-hints.md
.codex/skills/standalone-script/: SKILL.md
.codex/skills/standalone-script/assets/: pep723_typer_script.py
.codex/skills/vector-awkward/: SKILL.md
atlas-trigger/: README.md  pyproject.toml
atlas-trigger/src/atlas_trigger/: cli.py
