[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-trigger"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Gordon Watts", email = "gwatts@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "awkward>=2.0.0",
  "func_adl_servicex_xaodr25",
  "jinja2",
  "pyarrow",
  "servicex",
  "servicex_analysis_utils",
  "typer>=0.12.0",
]

[project.scripts]
atlas-trigger = "atlas_trigger.cli:main"

[project.urls]
Documentation = "https://github.com/Gordon Watts/atlas-trigger#readme"
Issues = "https://github.com/Gordon Watts/atlas-trigger/issues"
Source = "https://github.com/Gordon Watts/atlas-trigger"

[tool.hatch.version]
path = "src/atlas_trigger/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/atlas_trigger tests}"

[tool.coverage.run]
source_pkgs = ["atlas_trigger", "tests"]
branch = true
parallel = true
omit = [
  "src/atlas_trigger/__about__.py",
]

[tool.coverage.paths]
atlas_trigger = ["src/atlas_trigger", "*/atlas-trigger/src/atlas_trigger"]
tests = ["tests", "*/atlas-trigger/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
